@@ -1,3 +1,12 @@
+2012-08-03  Kai Tietz  <ktietz@redhat.com>
+
+	* secapi/_wctime32_s.c: New file.
+	* secapi/_ctime32_s.c: New file.
+	* Makefile.am: Add new files.
+        * Makefile.in: Regenerated.
+	* lib32/msvcrt.def: Commented symbols.
+	* lib64/msvcrt.def: Likewise.
+
 2012-08-01  Kai Tietz  <ktietz@redhat.com>
 
 	* secapi/_umask_s.c: New file.
